--- a/build.gradle
+++ b/build.gradle
@@ -29,5 +29,10 @@ repositories {
 dependencies {
     compile('org.springframework.boot:spring-boot-starter-web-services')
     compile 'com.google.maps:google-maps-services:0.1.15'
+    compile group: 'org.powermock', name: 'powermock-mockito-release-full', version: '1.5.4'
     testCompile('org.springframework.boot:spring-boot-starter-test')
+    testCompile 'junit:junit:4.12',
+            'org.powermock:powermock-core:1.6.1',
+            'org.powermock:powermock-module-junit4:1.6.1',
+            'org.powermock:powermock-api-mockito:1.6.1'
 }
