--- a/build.gradle
+++ b/build.gradle
@@ -4,15 +4,19 @@ buildscript {
     }
     repositories {
         mavenCentral()
+        jcenter()
     }
+
     dependencies {
         classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+        classpath "com.github.samueltbrown:gradle-cucumber-plugin:0.9"
     }
 }
 
 apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'spring-boot'
+apply plugin: "com.github.samueltbrown.cucumber"
 
 jar {
     baseName = 'retailmanager'
@@ -32,7 +36,11 @@ dependencies {
     compile group: 'org.powermock', name: 'powermock-mockito-release-full', version: '1.5.4'
     testCompile('org.springframework.boot:spring-boot-starter-test')
 
-    testCompile 'junit:junit:4.12', 'org.powermock:powermock-core:1.6.4',
+    testCompile 'junit:junit:4.12',
+            'org.powermock:powermock-core:1.6.4',
             'org.powermock:powermock-module-junit4:1.6.4',
-            'org.powermock:powermock-api-mockito:1.6.4'
+            'org.powermock:powermock-api-mockito:1.6.4',
+            'info.cukes:cucumber-java:1.1.8',
+            'info.cukes:cucumber-junit:1.1.8'
+    compile group: 'com.github.tomakehurst', name: 'wiremock', version: '1.18'
 }
