--- a/build.gradle
+++ b/build.gradle
@@ -42,5 +42,5 @@ dependencies {
             'org.powermock:powermock-api-mockito:1.6.4',
             'info.cukes:cucumber-java:1.1.8',
             'info.cukes:cucumber-junit:1.1.8'
-    compile group: 'com.github.tomakehurst', name: 'wiremock', version: '1.18'
+    testCompile group: 'com.github.tomakehurst', name: 'wiremock', version: '1.18'
 }
